Reduce docker image from 443.59 MB to 78.4 MB